--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory_order_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url={DB_URL}
+spring.datasource.username={DB_USERNAME}
+spring.datasource.password={{DB_PASSWORD}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.application.name=inventory-order-api
 
 # JWT Configuration
-jwt.secret=your-256-bit-secret-key-for-jwt-signing
-jwt.expiration=86400000
+jwt.secret={JWT_SECRET}
+jwt.expiration={JWT_EXPIRATION}
 
 # Server Port
 server.port=8080
